--- a/.github/workflows/primeiro-workflow.yml
+++ b/.github/workflows/primeiro-workflow.yml
@@ -1,24 +1,30 @@
-name: Meu Primeiro Workflow de CI
+name: CI - Build e Push da Imagem Docker
 
-# Gatilho: rodar quando houver push ou pull request para a branch main
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
 
-# Trabalhos a serem executados
 jobs:
-  build:
-    # Usar uma máquina virtual Ubuntu fornecida pelo GitHub
+  build-e-push:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
 
-    # Passos do nosso trabalho
     steps:
-      # Passo 1: Usa uma Action pronta para baixar o código do repositório
       - name: 1. Fazendo o checkout do código
         uses: actions/checkout@v4
 
-      # Passo 2: Executa um comando simples no terminal da máquina virtual
-      - name: 2. Listando os arquivos do repositório
-        run: ls -la
+      - name: 2. Login no GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: 3. Build e Push da Imagem Docker
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: ghcr.io/${{ github.repository }}:${{ github.sha }}
